tests/errors/arrays/index-non-array.fn
---
Description: Indexing into a non-array value
Expected: compile error
---

type Program
{
    fn Main -> i32
    {
        var x = 5
        var bad = x[0]
        return 0
    }
}
